webapps/test/v2/WEB-INF/jsp/error/401.jsp
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta charset="UTF-8" />
<link rel="stylesheet" href="${pageContext.request.contextPath}/css/error.css">
<title>401 Authorization Required</title>
</head>
<body>
	<div class="error-container">
		<h1>401 Authorization Required</h1>
		<p>This server could not verify that you are authorized to access
			the document requested. Either you supplied the wrong credentials
			(e.g., bad password), or your browser doesn't understand how to
			supply the credentials required.</p>
	</div>
</body>
</html>